# esp32-wii-controller

./: CMakeLists.txt  README.md  logs.txt  logs2.txt  sdkconfig
components/arduino-esp32/: CMakeLists.txt
components/bthci/: btdump.c
logs/: idf_py_stdout_output_21845
main/: CMakeLists.txt  bt_dump.c  fake_wii_remote.c  main.c  main.cpp  wii_controller.c  wii_controller.h  wii_mitm.c
wiimote/: Untitled Document
